--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Blog Title"
-author: "Blog Author"
+title: "Masoumeh Ghanbarpour"
+author: "Masoumeh Ghanbarpour"
 description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
 lang: "en"
@@ -20,9 +20,10 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "README.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
-  - {title: Github, icon: github, url: "https://github.com/niklasbuschmann/contrast"}
-  - {title: Subscribe, icon: rss, url: "/feed.xml"}
+  - {title: Mail, icon: envelope, url: "mailto:maghanba@ucsc.edu"}
+  - {title: Google Scholar, icon: rss, url: "https://scholar.google.com/citations?user=vFsfAxEAAAAJ&hl=en"}
+  - {title: Github, icon: github, url: "https://github.com/MasoumehGM"}
+  
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
