--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Masoumeh Ghanbarpour"
 author: "Masoumeh Ghanbarpour"
-description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
+description: ""
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
