--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Masoumeh Ghanbarpour"
 author: "Masoumeh Ghanbarpour"
-description: ""
+description: "Masoumeh Ghanbarpour Mamaghani"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
