--- a/hello.yml
+++ b/hello.yml
@@ -16,7 +16,7 @@ minimal: true           # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "Masoumeh Ghanbarpour CV.pdf", title: "Curriculum Vitae"}
+  - {file: "Masoumeh Ghanbarpour Resume.docx", title: "Curriculum Vitae"}
   - {file: "Transcript.pdf", title: "Transcript"}
   - {title: "Google Scholar", url: "https://scholar.google.com/citations?user=vFsfAxEAAAAJ&hl=en"}
 
